--- a/docs/recipes/锅塌里脊.md
+++ b/docs/recipes/锅塌里脊.md
@@ -1,6 +1,6 @@
 # 锅塌里脊
 
-## 🧂 食材准备
+## 食材准备
 
 ### 主料
 - 通脊
@@ -22,19 +22,19 @@
 ## 👨‍🍳 烹饪步骤
 
 ### 第一步：处理通脊肉片
-通脊去掉筋膜，横着切成1厘米厚的片，两面切上网纹花刀，然后切成骨牌块
+- 通脊去掉筋膜，横着切成1厘米厚的片，两面切上网纹花刀，然后切成骨牌块
 
 ### 第二步：腌制肉片
-将切好的通脊放在碗中，加入适量葱姜末、盐、黄酒、香油搅拌均匀，腌制20分钟
+- 将切好的通脊放在碗中，加入适量葱姜末、盐、黄酒、香油搅拌均匀，腌制20分钟
 
 ### 第三步：调制蛋液
-两个鸡蛋打散，加入适量水淀粉搅拌均匀
+- 两个鸡蛋打散，加入适量水淀粉搅拌均匀
 
 ### 第四步：煎制肉片
-腌好的肉两面沾上面粉抖一下，起锅烧油（油不要没过肉），油温三四成热时，将裹上面粉的肉裹上蛋液放入锅中煎至定型、两面金黄，捞出沥油备用
+- 腌好的肉两面沾上面粉抖一下，起锅烧油（油不要没过肉），油温三四成热时，将裹上面粉的肉裹上蛋液放入锅中煎至定型、两面金黄，捞出沥油备用
 
 ### 第五步：炖煮入味
-锅中倒少许清汤（水），加少许葱姜末、黄酒、盐、味精，水开后改小火，放入炸好的肉块，让肉块吸满汤汁
+- 锅中倒少许清汤（水），加少许葱姜末、黄酒、盐、味精，水开后改小火，放入炸好的肉块，让肉块吸满汤汁
 
 ### 第六步：装盘上菜
-肉块儿吸满汤汁后夹出摆盘，淋上少许香油、香菜叶，最后浇上剩余汤汁即可食用
+- 肉块儿吸满汤汁后夹出摆盘，淋上少许香油、香菜叶，最后浇上剩余汤汁即可食用
